--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,29 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Word temp files
+~$*
+
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
