Редактирование данных о проекте

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "server",
+  "name": "zachetka-ru-server",
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
