--- a/src/client/package.json
+++ b/src/client/package.json
@@ -19,8 +19,7 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +46,13 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
   }
 }
