--- a/src/client/package.json
+++ b/src/client/package.json
@@ -24,6 +24,7 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.3.2",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
