Настройка tailwind css

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -15,6 +15,6 @@
     "incremental": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"],
   "exclude": ["node_modules", "db"]
 }
