--- a/src/client/package.json
+++ b/src/client/package.json
@@ -27,10 +27,12 @@
     "@next/eslint-plugin-next": "^13.3.2",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
