--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Testing workflow [lint & build]
+name: Testing client workflow [lint & build]
 on: 
   workflow_dispatch:
   pull_request:
@@ -10,8 +10,10 @@ jobs:
       - name: Get repository code
         uses: actions/checkout@v3
       - name: Install deps
+        working-directory: ./src/client
         run: npm ci
       - name: Application building
+        working-directory: ./src/client
         run: npm run build
   lint:
     runs-on: ubuntu-20.04
@@ -19,6 +21,8 @@ jobs:
       - name: Get repository code
         uses: actions/checkout@v3
       - name: Install deps
+        working-directory: ./src/client
         run: npm ci
       - name: Code linting
+        working-directory: ./src/client
         run: npm run lint
