--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: Testing client workflow [lint & build]
 on: 
   workflow_dispatch:
   pull_request:
+    branches:
+    - '**'
     types: [opened, edited, reopened]
 jobs:
   build:
