--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -9,7 +9,6 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -17,10 +16,21 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "composite": true,
+    "declarationMap": true,
     "paths": {
-      "@src/*": ["./src/*"],
-      "@prisma/*": ["./prisma/*"],
-      "@test/*": ["./test/*"]
-    },
+      "@src/*": [
+        "./src/*"
+      ],
+      "@prisma/*": [
+        "./prisma/*"
+      ],
+      "@test/*": [
+        "./test/*"
+      ],
+      "@shared/*": [
+        "./shared/*"
+      ],
+    }
   }
 }
