--- a/src/server/package.json
+++ b/src/server/package.json
@@ -32,11 +32,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.4.2",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
