--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "jwt-decode": "^3.1.2",
     "next": "^13.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-select": "^5.7.2"
+    "react-select": "^5.7.2",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "dev": "next dev",
