--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -16,19 +16,19 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "incremental": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@shared/*": [
+        "../server/shared/*"
+      ]
+    },
   },
   "exclude": [
     "node_modules",
     "db"
   ],
-  "paths": {
-    "@shared/*": [
-      "./pages/*"
-    ]
-  },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
