--- a/src/server/package.json
+++ b/src/server/package.json
@@ -19,22 +19,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.15.0",
+    "@typescript-eslint/utils": "^5.59.8",
     "bcrypt": "^5.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^9.4.2",
