--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
+      - name : Installing node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.16.0"
       - name: Installing deps
         working-directory: ./src
         run: |
@@ -26,6 +30,10 @@ jobs:
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
+      - name : Installing node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.16.0"
       - name: Installing deps
         working-directory: ./src
         run: |
@@ -41,6 +49,10 @@ jobs:
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
+      - name : Installing node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.16.0"
       - name: Installing deps
         working-directory: ./src
         run: |
@@ -56,6 +68,10 @@ jobs:
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
+      - name : Installing node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.16.0"
       - name: Installing deps
         working-directory: ./src
         run: |
