--- a/src/server/package.json
+++ b/src/server/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^4.15.0",
     "@typescript-eslint/utils": "^5.59.8",
     "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
