--- a/src/package.json
+++ b/src/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build:server": "npm run build --workspace=server",
+    "build:server": "npm run build:prisma && npm run build --workspace=server",
     "build:client": "npm run build --workspace=client",
     "start:server": "npm run start:prod --workspace=server",
-    "start:client": "npm run start --workspace=client"
+    "start:client": "npm run start --workspace=client",
+    "build:prisma": "npm run build:prisma-pull && npm run build:prisma-generate",
+    "build:prisma-pull": "npm run prisma:pull --workspace=server",
+    "build:prisma-generate": "npm run prisma:generate --workspace=server"
+
   },
   "author": "",
   "license": "ISC",
