--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,6 +18,7 @@
     "luxon": "^3.3.0",
     "next": "^13.3.2",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.2"
