--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,14 +16,17 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "dayjs": "^1.11.8",
-    "luxon": "^3.3.0",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.3.0",
     "next": "^13.3.2",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
+    "react-data-grid": "^7.0.0-beta.37",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-qr-code": "^2.0.12",
     "react-select": "^5.7.2",
+    "recursive-diff": "^1.0.9",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
@@ -35,18 +38,18 @@
     "lf": "npm run lint && npm run format"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.4",
+    "@next/eslint-plugin-next": "^13.4.19",
     "@types/luxon": "^3.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   }
 }
