--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -30,6 +30,8 @@
       }
     ],
     "require-await": "off",
-    "@typescript-eslint/require-await": "off"
+    "@typescript-eslint/require-await": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off"
   }
 }
