--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -32,6 +32,7 @@
     "require-await": "off",
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
-    "@typescript-eslint/no-unsafe-member-access": "off"
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
