--- a/src/client/package.json
+++ b/src/client/package.json
@@ -27,6 +27,7 @@
     "react-qr-code": "^2.0.12",
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
+    "react-use-cookie": "^1.4.0",
     "recursive-diff": "^1.0.9",
     "universal-cookie": "^4.0.4"
   },
