--- a/src/server/package.json
+++ b/src/server/package.json
@@ -47,6 +47,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/luxon": "^3.3.2",
     "@types/node": "18.15.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
