--- a/src/server/package.json
+++ b/src/server/package.json
@@ -55,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "29.5.0",
     "prisma": "^4.15.0",
     "source-map-support": "^0.5.20",
